--- a/generateion2/v0.2/APPKanojo/app/build.gradle
+++ b/generateion2/v0.2/APPKanojo/app/build.gradle
@@ -19,6 +19,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a', 'x86_64'
+            universalApk true
+        }
+    }
 }
 
 dependencies {
